fixes spacing in some toggle buttons

--- a/src/ui/toggle-11/index.styl
+++ b/src/ui/toggle-11/index.styl
@@ -7,6 +7,7 @@
 	&:before
 		full-before()
 		right -1px
+		width calc(100% + 1px)
 		top 0
 		transform-origin top right
 		transform rotate(-90deg)
