--- a/src/ui/toggle-12/index.styl
+++ b/src/ui/toggle-12/index.styl
@@ -8,6 +8,7 @@
 		full-before()
 		right 0
 		top -1px
+		height calc(100% + 1px)
 		transform-origin top right
 		transform rotate(90deg)
 	
