--- a/src/ui/toggle-13/index.styl
+++ b/src/ui/toggle-13/index.styl
@@ -8,6 +8,7 @@
 		full-before()
 		right 0
 		bottom -1px
+		height calc(100% + 1px)
 		transform-origin bottom right
 		transform rotate(-90deg)
 	
