--- a/src/ui/toggle-14/index.styl
+++ b/src/ui/toggle-14/index.styl
@@ -8,6 +8,7 @@
 		full-before()
 		right -1px
 		bottom 0
+		width calc(100% + 1px)
 		transform-origin bottom right
 		transform rotate(90deg)
 	
