--- a/src/ui/toggle-15/index.styl
+++ b/src/ui/toggle-15/index.styl
@@ -7,7 +7,7 @@
 	&:after
 		top 0
 		position absolute
-		width calc(50% + 20px)
+		width calc(50% + 21px)
 		height 100%
 		content ''
 		background-color $default-color
